fix EVERY PAGE BEING TOO WIDE

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
 
     font-size: 100%;
 
-
+    margin:25px 0;
 }
 
 #main-header {
